# Smartphoneroleplay

./: .gitignore  BUILD_NOTES.md  NATIVE_DIAGNOSTIC_SAFE_MODE_STATUS.md  ON_DEVICE_MODEL.md  PRODUCT_READY_STATUS.md  PROJECT_STATUS.md  README.md  UI_POLISH_STATUS.md  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_runtime.cpp
app/src/main/java/com/kurkurkury/smartphoneroleplay/: MainActivity.kt
app/src/main/java/com/kurkurkury/smartphoneroleplay/ai/: AiEngineController.kt  AiEngineMode.kt  AiReplyClient.kt  AndroidLocalLlmEngine.kt  CloudAiReplyClient.kt  DemoAiReplyClient.kt  EngineFailureClassifier.kt  EngineModelCompatibility.kt  EngineModelFileManager.kt  MediaPipeEngineSession.kt  MediaPipePlannedEngine.kt  MlcPlannedEngine.kt  ModelImportResult.kt  NativeLlamaBridge.kt  NativeProbeService.kt  OnDeviceLlamaConfig.kt  OnDeviceModelFileManager.kt  OnDeviceReplyClient.kt  RoleplayPromptBuilder.kt
app/src/main/java/com/kurkurkury/smartphoneroleplay/data/: CharacterRepository.kt  ChatStorage.kt  CustomCharacterStorage.kt  DemoReplyEngine.kt
app/src/main/java/com/kurkurkury/smartphoneroleplay/engine/: ChatEngine.kt
app/src/main/java/com/kurkurkury/smartphoneroleplay/model/: ChatMessage.kt  RoleplayCharacter.kt
app/src/main/res/values/: styles.xml
